--- a/chatbot.html
+++ b/chatbot.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="chatbot.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <title>
-        Eliza
+        Stefan
     </title>
 </head>
 <body>
     <div class="container">
         <div class="row">
             <div class="col-xs-18 col-md-12">
-                <h1 align="center">Eliza</h1>
+              <h1 align="center">Stefan</h1>
             </div>
         </div>
         <div class="row">
@@ -25,7 +25,7 @@
             </div>
             <div class="col-xs-12 col-md-8">
               <div id="question-area" data-spy="affix" data-offset-top="60">
-                <input type="text" id="input" value=""><button type="button" id="talkButton" class="btn-talk">Speak</button>
+                <input type="text" id="input" value=""><button type="button" id="talkButton" class="btn-talk" onclick="askQuestion()">Speak</button>
               </div>
                 <div id="chat-area">
                 </div>
